--- a/templates/index.html
+++ b/templates/index.html
@@ -1,31 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rpi X-tractor</title>
-    <link rel="stylesheet" href= "{{ url_for('static',filename='styles/mainpage.css') }}">
-
-</head>
-<body>
-    <header>
-        <div class="topnav">
-            <a class="active" href="/">Home</a>
-            <a href="#news">Voltage Glitcher</a>
-            <a href="spi.html">SPI Flash Extractor</a>
-            <a href="uart.html">UART</a>
-        </div>
-    </header>
-    <main>
-    
-
-    </main>
-    <footer>
-
-
-    </footer>
-</body>
-
-</html>
+{% extends 'base.html' %}
+{% set cur_page = "home" %}
