--- a/templates/uart.html
+++ b/templates/uart.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rpi X-tractor</title>
-
-    <link rel="stylesheet" href= "{{ url_for('static',filename='styles/mainpage.css') }}">
+{% extends 'base.html' %}
+{% set cur_page = 'uart' %}
+{% block main_body %}
 <script>
     function showForm(event){
         console.log(event)
@@ -20,19 +13,21 @@
         }
     }
 </script>
-</head>
-<body>
-    <header>
-        <div class="topnav">
-            <a href="/">Home</a>
-            <a href="#news">Voltage Glitcher</a>
-            <a href="spi.html">SPI Flash Extractor</a>
-            <a class="active" href="uart.html">UART</a>
-
-        </div>
-    </header>
     <main>
     <div class="uart_options">
+
+        <button id="self_test" onclick="showForm('self_test')"> self Test</button>
+        <div id="self_test" class="none">
+            <form action="/self_test">
+                <label for="sampling_rate">Sample Time</label>
+                <input type="text" name="sampling_rate" id="sampling_rate">
+                <label for="power_cycle_delay">Reboot Delay</label>
+                <input type="text" name="power_cycle_delay" id="power_cycle_delay">
+                <input type="submit">
+            </form>
+        </div>
+
+
         <button id="detect_baudrate" onclick="showForm('detect_baudrate_form')">Detect Baudrate</button>
         <div id="detect_baudrate_form" class="none">
             <form action="/detect_baudrate">
@@ -65,6 +60,8 @@
             </form>
         </div>
         <button><a href="/boot_log_analyse">Analyze Boot logs</a></button>
+        <button><a href="/show_raw_boot_logs">Raw Boot logs</a></button>
+
     </div>
 
     </main>
@@ -72,6 +69,5 @@
 
 
     </footer>
-</body>
 
-</html>
+    {% endblock %}
