--- a/templates/output_logs.html
+++ b/templates/output_logs.html
@@ -1,40 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rpi X-tractor</title>
-    <link rel="stylesheet" href= "{{ url_for('static',filename='styles/mainpage.css') }}">
 
-</head>
-<body>
-    <header>
-        <div class="topnav">
-            <a href="/">Home</a>
-            <a href="#news">Voltage Glitcher</a>
-            <a href="spi.html">SPI Flash Extractor</a>
-            <a href="uart.html">UART</a>
-            <a class="active"  href="uart.html">Analysis</a>
-        </div>
-    </header>
-    <main>
-        <div class="des_output_logs">
-        Lines that invoked Rules ::::
+{% extends 'base.html' %}
+{% set cur_page = 'list_firm' %}
+{% block main_body %}
+<h3>Raw String Output</h3>
+    <div class="main_output">
+        <pre>
+            {{data}}
+        </pre>
     </div>
-        <div class="main_output">
-            <pre>
-                {{data}}
-            </pre>
-        </div>
-    
-
-    </main>
-    <footer>
-
-
-    </footer>
-</body>
-
-</html>
+{% endblock %}
