--- a/templates/list_of_logs.html
+++ b/templates/list_of_logs.html
@@ -6,8 +6,8 @@
     <thead>
       <tr>
         <th scope="col">Name</th>
-        <th scope="col">Binwalk</th>
-        <th scope="col">Strings</th>
+        <th scope="col">Raw</th>
+        <th scope="col">Analyze</th>
       </tr>
     </thead>
     <tbody>
