--- a/templates/uart.html
+++ b/templates/uart.html
@@ -59,7 +59,7 @@
                 <input type="submit">
             </form>
         </div>
-        <button><a href="/boot_log_analyse">Analyze Boot logs</a></button>
+        <button><a href="/boot_log_analyse?file_name=uart_boot_log">Analyze Boot logs</a></button>
         <button><a href="/show_raw_boot_logs">Raw Boot logs</a></button>
 
     </div>
